# backend/routes/auth.route.js
@@ -10,7 +10,7 @@ const {
   categoriesFromId,
 } = require("../controller/menu");
 const categories = require("../controller/categories");
-const { viewOrders, createOrder } = require("../controller/order");
+const { viewOrders, createOrder, deleteOrder } = require("../controller/order");
 const multer = require("multer");
 const upload = multer({ dest: "uploads/" });
 
@@ -55,4 +55,5 @@ router.get("/categories", categories);
 router.get("/categories/:itemid", categoriesFromId);
 router.get('/orders', viewOrders);
 router.post('/orders/create', createOrder);
+router.delete('/orders/delete', deleteOrder);
 module.exports = router;
