# backend/swagger.json
@@ -1,5 +1,5 @@
 {
-"swagger": "2.0",
+  "swagger": "2.0",
   "info": {
     "version": "1.0.0",
     "title": "REST API",
@@ -56,42 +56,74 @@
           {
             "name": "search",
             "in": "query",
-            "type": "string",
-            "description": "Search term for menu items"
+            "type": "string"
           },
           {
             "name": "category",
             "in": "query",
-            "type": "string",
-            "description": "Category of menu items"
+            "type": "string"
           },
           {
             "name": "min_price",
             "in": "query",
-            "type": "number",
-            "format": "float",
-            "description": "Minimum price of menu items"
+            "type": "string"
           },
           {
             "name": "max_price",
             "in": "query",
-            "type": "number",
-            "format": "float",
-            "description": "Maximum price of menu items"
+            "type": "string"
           },
           {
             "name": "sort_type",
             "in": "query",
-            "type": "string",
-            "enum": ["price", "name"],
-            "description": "Sorting type for menu items"
+            "type": "string"
           },
           {
             "name": "sort_order",
             "in": "query",
-            "type": "string",
-            "enum": ["ASC", "DESC"],
-            "description": "Sorting order for menu items"
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/menu/edit": {
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "name",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "description",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "ingredients",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "categories",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "price",
+            "in": "query",
+            "type": "string"
           }
         ],
         "responses": {
@@ -112,83 +144,22 @@
               "type": "object",
               "properties": {
                 "name": {
-                  "example": "Hot Apple Pie"
+                  "example": "any"
                 },
                 "description": {
-                  "example": "Yummy!"
+                  "example": "any"
                 },
                 "ingredients": {
-                  "example": "Apple, Sugar, Flour, Water"
+                  "example": "any"
                 },
                 "categories": {
-                  "example": ["Breakfast", "Lunch", "Dinner"]
+                  "example": "any"
                 },
                 "price": {
-                  "example": 4.99
-                },
-                "thumb": {
-                  "example": ""
+                  "example": "any"
                 }
               }
             }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/menu/edit": {
-      "put": {
-        "description": "Edit a menu item",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "query",
-            "type": "integer",
-            "description": "ID of the menu item"
-          },
-          {
-            "name": "name",
-            "in": "query",
-            "type": "string",
-            "description": "Name of the menu item"
-          },
-          {
-            "name": "description",
-            "in": "query",
-            "type": "string",
-            "description": "Description of the menu item"
-          },
-          {
-            "name": "ingredients",
-            "in": "query",
-            "type": "string",
-            "description": "Ingredients of the menu item"
-          },
-          {
-            "name": "categories",
-            "in": "query",
-            "type": "array",
-            "items": {
-              "type": "string"
-            },
-            "collectionFormat": "multi",
-            "description": "Categories of the menu item"
-          },
-          {
-            "name": "price",
-            "in": "query",
-            "type": "int",
-            "description": "Price of the menu item"
-          },
-          {
-            "name": "thumbnail",
-            "in": "query",
-            "type": "string",
-            "description": "Path of the image"
           }
         ],
         "responses": {
@@ -209,10 +180,39 @@
               "type": "object",
               "properties": {
                 "id": {
-                  "example": 10
+                  "example": "any"
                 }
               }
             }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/categories": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/categories/{itemid}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "itemid",
+            "in": "path",
+            "required": true,
+            "type": "string"
           }
         ],
         "responses": {
@@ -229,12 +229,12 @@
           {
             "name": "accountId",
             "in": "query",
-            "type": "integer"
+            "type": "string"
           },
           {
             "name": "orderId",
             "in": "query",
-            "type": "integer"
+            "type": "string"
           }
         ],
         "responses": {
@@ -255,29 +255,37 @@
               "type": "object",
               "properties": {
                 "accountId": {
-                  "example": 1
+                  "example": "any"
                 },
                 "tableId": {
-                  "example": 1
+                  "example": "any"
                 },
                 "items": {
-                  "example": [
-                    {
-                      "id": 1,
-                      "quantity": 1,
-                      "note": "Fresh..."
-                    },
-                    {
-                      "id": 2,
-                      "quantity": 2,
-                      "note": "Tasty..."
-                    },
-                    {
-                      "id": 3,
-                      "quantity": 3,
-                      "note": "Hot..."
-                    }
-                  ]
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/orders/delete": {
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "orderId": {
+                  "example": "any"
                 }
               }
             }
